--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,54 @@
-<h2>Sign up</h2>
+<% content_for(:page_title, "Sign up") %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<%= form_for(resource,
+  as: resource_name,
+  url: registration_path(resource_name)) do |f| %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+  <div class="form-group">
+    <%= render "devise/shared/error_messages",
+      resource: resource %>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <div class="flex flex-wrap -mx-3 mb-0 md:mb-4">
+      <div class="w-full md:w-1/2 px-3 mb-4 md:mb-0">
+        <%= f.label :first_name %>
+        <%= f.text_field :first_name,
+          autofocus: true,
+          required: true %>
+      </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+      <div class="w-full md:w-1/2 px-3 mb-4 md:mb-0">
+        <%= f.label :last_name %>
+        <%= f.text_field :last_name %>
+      </div>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+    <div class="mb-4">
+      <%= f.label :username %>
+      <%= f.text_field :username, required: true %>
+    </div>
+
+    <div class="mb-4">
+      <%= f.label :email %>
+      <%= f.email_field :email, required: true %>
+    </div>
+
+    <div class="mb-4">
+      <%= f.label :password %>
+      <%= f.password_field :password, required: true %>
+    </div>
+
+    <div class="mb-4">
+      <%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation, required: true %>
+    </div>
+
+    <%= f.submit "Sign up", class: "cta-btn" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class="text-center">
+  <p class="text-grey-500 text-sm">
+    Have an account?
+    <%= link_to "Sign in", new_user_session_path %>.
+  </p>
+</div>
