--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,27 @@
-<h2>Change your password</h2>
+<% content_for(:page_title, "Reset password") %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
+<%= form_for(resource,
+  as: resource_name,
+  url: password_path(resource_name),
+  html: { method: :put }) do |f| %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
-  </div>
+  <div class="form-group">
+    <%= render "devise/shared/error_messages",
+      resource: resource %>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <%= f.hidden_field :reset_password_token %>
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
+    <div class="mb-4">
+      <%= f.label :password, "New password" %>
+      <%= f.password_field :password, autofocus: true %>
+    </div>
+
+    <div class="mb-4">
+      <%= f.label :password_confirmation,
+        "Confirm new password" %>
+      <%= f.password_field :password_confirmation %>
+    </div>
+
+    <%= f.submit "Change my password", class: "cta-btn w-full" %>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
