--- a/app/views/layouts/session.html.erb
+++ b/app/views/layouts/session.html.erb
@@ -1,18 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= yield :page_title %></title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all' %>
-    <%= javascript_pack_tag 'application' %>
-
-    <meta name="viewport"
-      content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible"
-      content="ie=edge">
-  </head>
+  <%= render "layouts/header" %>
 
   <body class="body-session">
     <h1 class="title hidden md:block absolute mb-6 mt-2 ml-2">
