--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
     content="ie=edge">
 
   <%= evil_icons_sprite %>
-  <%# <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+  <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
     <symbol id="ei-timeline-icon" viewBox="0 0 50 50">
     <path d="M42 20h-2v-5c0-.6-.4-1-1-1H11c-.6
       0-1 .4-1 1v5H8v-5c0-1.7 1.3-3 3-3h28c1.7
@@ -27,5 +27,5 @@
       1.7-1.3 3-3 3z"/>
     <path d="M8 18h34v2H8z"/>
     </symbol>
-  </svg> %>
+  </svg>
 </head>
